--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 #server.port=${port:8081}
-spring.profiles.active=dev
-spring.jpa.open-in-view=true
+spring.profiles.active=test
+#spring.jpa.open-in-view=true
