--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 #server.port=${port:8081}
 spring.profiles.active=test
 #spring.jpa.open-in-view=true
+
+default.sender=fredericosff@gmail.com
+default.recipient=fredericosff@gmail.com
