Implementando SmtpEmailService com servidor do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.port=${port:8081}
-spring.profiles.active=test
+spring.profiles.active=dev
 #spring.jpa.open-in-view=true
 
-default.sender=fredericosff@gmail.com
-default.recipient=fredericosff@gmail.com
+default.sender=nada.tudo@gmail.com
+default.recipient=nada.tudo@gmail.com
