--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.port=${port:8081}
-spring.profiles.active=dev
+spring.profiles.active=test
 #spring.jpa.open-in-view=true
 
 default.sender=nada.tudo@gmail.com
