Implementando autentica  o e gera  o do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.profiles.active=test
 
 default.sender=nada.tudo@gmail.com
 default.recipient=nada.tudo@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
